--- a/sector-rotation-model-using-ml.ipynb
+++ b/sector-rotation-model-using-ml.ipynb
@@ -926,6 +926,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Next Steps\n",
+    "Need to look at backtest stats of predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "-----"
    ]
   }
